@@ -1,15 +1,19 @@
 package core;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.TreeMap;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonIOException;
 import com.google.gson.JsonSyntaxException;
 
 import config.Behaviour;
+import config.Instance;
 import config.Robot;
+import config.RobotType;
 import config.SystemConfig;
 import simbad.sim.EnvironmentDescription;
 
@@ -18,7 +22,7 @@ public class MyEnv extends EnvironmentDescription {
 	
 	private static Gson gson = new Gson();
 	
-	public MyEnv(String filename) throws InstantiationException, IllegalAccessException, ClassNotFoundException, JsonSyntaxException, JsonIOException, FileNotFoundException {
+	public MyEnv(String filename) throws InstantiationException, IllegalAccessException, ClassNotFoundException, JsonSyntaxException, JsonIOException, FileNotFoundException, InvocationTargetException, NoSuchMethodException, SecurityException {
 		SystemConfig config = gson.fromJson(new FileReader(filename), SystemConfig.class);
 	
 		// Load System Behaviours
@@ -27,11 +31,27 @@ public class MyEnv extends EnvironmentDescription {
 		}
 		
 		// Create Maze
-		((MazeGenerator) Class.forName(config.maze.generator).newInstance()).generate(this);
+		((MazeGenerator) Class.forName(config.maze.generator).getConstructor().newInstance()).generate(this);
 
-		// Create Robots
-		for (Robot robot : config.robots) {
-			add(((MazeRobotFactory) Class.forName(robot.factory).newInstance()).create(robot));
+		if (config.types != null) {
+			Map<String, RobotType> types = new TreeMap<String, RobotType>();
+			for(RobotType type : config.types) {
+				types.put(type.name, type);
+			}
+			
+			if (config.instances.type.equals("enumeration")) {
+				for (Instance instance : config.instances.enumeration) {
+					RobotType type = types.get(instance.type);
+					if (type == null) throw new RuntimeException("No such robot type: " + instance.type); 
+					add(((MazeRobotFactory) Class.forName(type.factory).getConstructor().newInstance()).create(type, instance));
+				}
+			}
+		} else {
+			// old robot creation mechanism 
+			// Create Robots
+			for (Robot robot : config.robots) {
+				add(((MazeRobotFactory) Class.forName(robot.factory).getConstructor().newInstance()).create(robot));
+			}
 		}
 	}
 }
